Test for --enable-native-access instead of capturing System.err